# hellweg2d

./: README.md
hellweg2d-cmd/: CMakeLists.txt  README.md  build.sh  hellweg2d.cpp
hellweg2d-cmd/kernel/: CMakeLists.txt
